--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "graphqlapi-reactclient",
   "version": "1.0.0",
   "description": "graphQl api with react client example",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Bryan Sharpley",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
